WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48654
ASSERTION FAILURE in WebProcessProxy::frameDestroyed when a Page is closed before it can send the DidCreateMainFrame message to the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=48654
Summary
ASSERTION FAILURE in WebProcessProxy::frameDestroyed when a Page is closed be...
Jessie Berlin
Reported
2010-10-29 12:05:26 PDT
WebProcessProxy::frameDestroyed asserts that the frameID it was called with was registered in WebProcessProxy::frameCreated (which is called when the WebPageProxy is created). However, in the case where we close the page before it's had the chance to send the DidCreateMainFrame message back to the UI process, the UI Process will get the DidDestroyFrame message because it's sent directly to the WebProcessProxy and doesn't go through WebPageProxy. Therefore, the assert is invalid for that case and should be removed. <
rdar://problem/8600977
>
Attachments
Remove the invalid assertion
(1.96 KB, patch)
2010-10-29 12:18 PDT
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2010-10-29 12:18:19 PDT
Created
attachment 72366
[details]
Remove the invalid assertion
Anders Carlsson
Comment 2
2010-10-29 12:26:04 PDT
Comment on
attachment 72366
[details]
Remove the invalid assertion View in context:
https://bugs.webkit.org/attachment.cgi?id=72366&action=review
> WebKit2/UIProcess/WebProcessProxy.cpp:492 > + return;
You can remove the call to m_frameMap.contains here, m_frameMap.remove will work just fine even if the frame doesn't exist in the map and it will avoid an extra hash lookup.
Jessie Berlin
Comment 3
2010-10-29 12:28:24 PDT
(In reply to
comment #2
)
> (From update of
attachment 72366
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=72366&action=review
> > > WebKit2/UIProcess/WebProcessProxy.cpp:492 > > + return; > > You can remove the call to m_frameMap.contains here, m_frameMap.remove will work just fine even if the frame doesn't exist in the map and it will avoid an extra hash lookup.
Done.
Jessie Berlin
Comment 4
2010-10-29 12:32:30 PDT
Comment on
attachment 72366
[details]
Remove the invalid assertion Commited in
r70915
http://trac.webkit.org/changeset/70915
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug